--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
     "require": {
         "php": "^8.4",
+        "ext-pdo": "*",
         "nikic/fast-route": "^1.3",
         "nyholm/psr7": "^1.8",
+        "psr/container": "^2.0",
         "psr/http-server-middleware": "^1.0",
         "spiral/roadrunner-http": "^3.5",
         "spiral/roadrunner-worker": "^3.6"
