--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "nyholm/psr7": "^1.8",
         "psr/container": "^2.0",
         "psr/http-server-middleware": "^1.0",
+        "psr/log": "^3.0",
         "spiral/roadrunner-http": "^3.5",
         "spiral/roadrunner-worker": "^3.6"
     },
