feat: add protobuf

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": ["src/", "protos/gen/App/"]
         }
     },
     "autoload-dev": {
