--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -1,5 +1,9 @@
 version: '3'
 
+vars:
+  PROTO_DIR: protos/proto
+  GEN_DIR: protos/gen
+
 tasks:
   verify:
     desc: Run all checks
@@ -14,3 +18,14 @@ tasks:
     desc: Run unit tests
     cmds:
       - vendor/bin/phpunit --colors=always
+
+  proto:gen:
+    desc: Generate PHP classes from proto files
+    cmds:
+      - rm -rf {{.GEN_DIR}}/*
+      - >
+        protoc -I={{.PROTO_DIR}}
+        --php_out={{.GEN_DIR}}
+        --php_opt=aggregate_metadata
+        {{.PROTO_DIR}}/app/v1/*.proto
+        {{.PROTO_DIR}}/google/api/*.proto
