--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "spiral/roadrunner-worker": "^3.6"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.66",
         "phpstan/phpstan": "^2.0",
         "phpunit/phpunit": "^11.5"
     },
