--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,10 @@ on:
   release:
     types: [created]
 
+env:
+  PHP_CS_FIXER_IGNORE_ENV: true
+  PHP_CS_FIXER_FUTURE_MODE: true
+
 jobs:
   build:
     name: Build Release Package
@@ -37,6 +41,11 @@ jobs:
           sudo unzip -o "${PROTOC_ZIP}" -d /usr/local bin/protoc
           sudo unzip -o "${PROTOC_ZIP}" -d /usr/local include/*
           rm -f "${PROTOC_ZIP}"
+      
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.20'
       
       - name: Install protoc-gen-openapiv2
         run: |
