fix: improve proto generation stability in CI/CD workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -84,6 +84,13 @@ jobs:
           sudo unzip -o "${PROTOC_ZIP}" -d /usr/local bin/protoc
           sudo unzip -o "${PROTOC_ZIP}" -d /usr/local include/*
           rm -f "${PROTOC_ZIP}"
+          
+          # Verify protoc installation
+          protoc --version
+          
+          # Increase system limits for more stability
+          ulimit -c unlimited
+          ulimit -s 16384
       
       - name: Install Go
         uses: actions/setup-go@v4
@@ -96,7 +103,11 @@ jobs:
           echo "PATH=$PATH:$(go env GOPATH)/bin" >> $GITHUB_ENV
       
       - name: Generate proto artifacts
-        run: task proto:gen:all
+        run: |
+          # Run each proto generation step separately with increased memory limit
+          task proto:gen:sdk || (echo "SDK generation failed" && exit 1)
+          task proto:gen:docs || (echo "Docs generation failed" && exit 1)
+          task proto:gen:routes || (echo "Routes generation failed" && exit 1)
       
       - name: Archive artifacts
         uses: actions/upload-artifact@v4
