--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,8 +76,16 @@ jobs:
           version: '3.x'
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v2
+      - name: Install Protoc
+        run: |
+          if ! type protoc > /dev/null 2>&1; then
+            echo "Installing protobuf compiler..."
+            sudo apt-get update
+            sudo apt-get install -y protobuf-compiler
+          fi
+          
+          # Verify protoc installation
+          protoc --version
       
       - name: Install Go
         uses: actions/setup-go@v4
@@ -96,23 +104,20 @@ jobs:
           # Create necessary directories
           mkdir -p protos/gen docs
           
-          # Pull and use appropriate protobuf Docker image
+          # Try with direct protoc command
           echo "Generating PHP SDK..."
-          docker run --rm -v $(pwd):/workspace -v /usr/local/bin/protoc-gen-openapiv2:/usr/local/bin/protoc-gen-openapiv2 \
-            jaegertracing/protobuf:0.4.0 \
-            protoc -I=/workspace/protos/proto \
-            --php_out=/workspace/protos/gen \
+          cd $(pwd)
+          sudo protoc -I=protos/proto \
+            --php_out=protos/gen \
             --php_opt=aggregate_metadata \
-            /workspace/protos/proto/app/v1/*.proto \
-            /workspace/protos/proto/google/api/*.proto
+            protos/proto/app/v1/*.proto \
+            protos/proto/google/api/*.proto
           
           echo "Generating OpenAPI docs..."
-          docker run --rm -v $(pwd):/workspace -v /usr/local/bin/protoc-gen-openapiv2:/usr/local/bin/protoc-gen-openapiv2 \
-            jaegertracing/protobuf:0.4.0 \
-            protoc -I=/workspace/protos/proto \
-            --openapiv2_out=logtostderr=true:/workspace/docs \
+          sudo protoc -I=protos/proto \
+            --openapiv2_out=logtostderr=true:docs \
             --openapiv2_opt=json_names_for_fields=true,allow_merge=true,merge_file_name=api \
-            /workspace/protos/proto/app/v1/*.proto
+            protos/proto/app/v1/*.proto
           
           echo "Generating routes..."
           php bin/generate-routes.php
