feat: add RoadRunner KV cache integration

--- a/.rr.yaml
+++ b/.rr.yaml
@@ -23,3 +23,19 @@ status:
 
 metrics:
   address: 127.0.0.1:2112
+
+kv:
+  # Конфигурация для кеша в памяти (для разработки)
+  local-memory:
+    driver: memory
+    config:
+      interval: 60 # Очистка устаревших записей каждые 60 секунд
+
+  # Конфигурация для Redis
+  redis:
+    driver: redis
+    config:
+      addrs:
+        - "127.0.0.1:6379"
+      db: 0 # Номер базы данных Redis
+      password: "" # Оставьте пустым, если авторизация не требуется
