--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "psr/http-server-middleware": "^1.0",
         "psr/log": "^3.0",
         "spiral/roadrunner-http": "^3.5",
+        "spiral/roadrunner-kv": "^4.3",
         "spiral/roadrunner-worker": "^3.6"
     },
     "require-dev": {
