--- a/tools/protoc-php-gen/composer.json
+++ b/tools/protoc-php-gen/composer.json
@@ -8,6 +8,11 @@
             "ProtoPhpGen\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
     "require": {
         "php": ">=8.1",
         "google/protobuf": "^3.0",
@@ -17,15 +22,18 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.0",
-        "phpstan/phpstan": "^1.0"
+        "phpstan/phpstan": "^1.0",
+        "phpunit/phpunit": "^10.0"
     },
     "scripts": {
         "cs": "PHP_CS_FIXER_IGNORE_ENV=true php-cs-fixer fix --dry-run",
         "cs-fix": "PHP_CS_FIXER_IGNORE_ENV=true php-cs-fixer fix",
         "phpstan": "phpstan analyse --no-progress",
+        "test": "phpunit",
         "check": [
             "@cs",
-            "@phpstan"
+            "@phpstan",
+            "@test"
         ]
     },
     "bin": [
