--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -85,18 +85,6 @@ tasks:
     cmds:
       - "{{.PHP}} bin/generate-routes.php"
       
-  proto:gen:entities:
-    desc: Generate domain entities from proto files
-    deps: [ tools:proto:setup ]
-    cmds:
-      - mkdir -p gen/Infrastructure/Hydrator
-      - cp tools/protoc-php-gen/bin/protoc-php-gen.php protoc-gen-php-gen
-      - chmod +x protoc-gen-php-gen
-      - >
-        PATH="$PATH:$PWD" PROTOC_PHP_GEN_DEBUG=true protoc -I={{.PROTO_DIR}}
-        --php-gen_out="namespace=App\\Gen;output_dir=gen"
-        {{.PROTO_DIR}}/app/domain/*.proto
-      - rm protoc-gen-php-gen
 
   proto:gen:hydrators:
     desc: Generate hydrators from PHP attributes in domain classes
@@ -107,7 +95,7 @@ tasks:
 
   proto:gen:all:
     desc: Generate all artifacts from proto files and attributes
-    deps: [ proto:gen:sdk, proto:gen:docs, proto:gen:routes, proto:gen:entities, proto:gen:hydrators ]
+    deps: [ proto:gen:sdk, proto:gen:docs, proto:gen:routes, proto:gen:hydrators ]
 
   tools:proto:setup:
     desc: Setup protoc-php-gen plugin
